# mercury-init-test

./: CMakeLists.txt  README.md  mercury-init-test.c
